# ScenGen

./: .env.development  .env.example  .env.production  .env.test  .env.testing  .gitignore  README.md  folder_structure.py  init_proj_structure.bat  luzTest.py  pyproject.toml  requirements.txt
Backend/app/: __init__.py  run.py
Backend/app/models/: __init__.py  data_models.py  feedback_models.py  latent_models.py  run_models.py
Backend/app/routes/: all_configs.py  currency_pairs.py  model_configs.py  model_runs.py  pca_configs.py  pca_projections.py  som_configs.py  som_projections.py
Backend/app/tests/: conftest.py
Backend/app/tests/models/: test_data_models.py
Backend/app/tests/routes/: run_model_configs.py  (+4 more)
Backend/app/utils/: fx_loader.py  fx_loader_min.py
Backend/tests/models/: test_data_models.py
Frontend/: dash_app.py
Frontend/assets/: accordion.css
Frontend/components/: currency_plots.py  modals.py  plots.py  selector.py
Frontend/handlers/: base.py  model_handler.py  pca_handler.py  plot_handler.py  som_handler.py
Pytorch/dataset/: psql_dataset.py
Pytorch/models/: loss.py  lstm_vae.py
Pytorch/projections/: pca.py  som.py
Pytorch/tests/: addHoc.py  cluster_analysis.py  run_pca_trainer_dev.py  run_psql_dataset.py  run_som_trainer_dev.py  run_vae_trainer_dev.py  sometest.py
Pytorch/trainers/: pca_trainer.py  som_trainer.py  vae_trainer.py
Pytorch/utils/: export.py
Shared/config/: database.py  dotenv_loader.py
scengen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: fetch_fx.py
(+1 files in other folders)
