[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scengen"
version = "0.1.0"
description = "Scenario generation and latent space analysis app."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flask",
  "dash",
  "flask_sqlalchemy",
  "torch",
  "scikit-learn",
  "pandas",
  "plotly",
  "minisom",
  "redis",
  "requests",
  "python-dotenv",
  "psycopg2-binary"
]

[tool.setuptools.packages.find]
# Include all top-level code and subpackages, including Frontend
include = [
  "Pytorch", "Pytorch.*",
  "Backend", "Backend.*",
  "Shared", "Shared.*",
  "scripts", "scripts.*",
  "Frontend", "Frontend.*"
]

[project.scripts]
# Utility entry points (prefixed with project name)
scengen-fetch-fx        = "scripts.fetch_fx:main"
scengen-start-backend   = "Backend.app.run:main"
scengen-start-frontend  = "Frontend.dash_app:main"